--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="#"> <img class="logotext" src="primelogo.png" alt=""> </a>
+            <a href="#"> <img class="logotext" src="primelogo.PNG" alt=""> </a>
             <nav>
                 <a href="">EN</a>
                 <a href="">Sign in</a>
